Hide soul coins option

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
                         Hide Legendary Items
                     </label>
                     <label class="btn btn-secondary">
+                        <input type="checkbox" id="toggleHideSoulCoins">
+                        <span class="glyphicon glyphicon-eye-close"></span>
+                        <span class="glyphicon glyphicon-eye-open"></span>
+                        Hide Soul Coins
+                    </label>
+                    <label class="btn btn-secondary">
                         <input type="checkbox" id="toggleHideStory">
                         <span class="glyphicon glyphicon-eye-close"></span>
                         <span class="glyphicon glyphicon-eye-open"></span>
